--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Really cool blog about ... something"
-lang: "en"
+title: "Diseño de la Investigación Social"
+author: "Pia Carozzi"
+description: "Apuntes Ayudantía"
+lang: "es"
 
 # Page settings
 permalink: /:title/          # see https://jekyllrb.com/docs/permalinks/
-date_format: "%B %d, %Y"     # see http://shopify.github.io/liquid/filters/date/
+date_format: "%b %d, %y"     # see http://shopify.github.io/liquid/filters/date/
 hide_title: false            # remove site heading in the header
 post_footer: true            # show previous and next links at the end of each post
 
 # Theme settings
 dark_theme: false            # use the dark mode as default
-dark_header: false           # keep the header dark
+dark_header: true           # keep the header dark
 # style: minimal             # use a simpler style inspired by the minima theme
 
 navigation:                  # (optional) site navigation in the header
@@ -20,12 +20,12 @@ navigation:                  # (optional) site navigation in the header
 #  - title: "https://"       # linking external sites is also supported
 
 icons:                       # (optional) icons in the header, see http://fontawesome.com/icons
-  envelope: "mailto:niklasbuschmann@users.noreply.github.com"
-  github: "https://github.com/niklasbuschmann/contrast"
-  rss: "/contrast/feed.xml"
+  envelope: "mailto:pjcarozzi@uc.cl"
+  github: "https://github.com/pjcarozzi/SOL3000_19"
+  rss: "/SOL3000_19/feed.xml"
 
 # Pagination
-show_excerpts: false         # preview articles on the home page
+show_excerpts: true         # preview articles on the home page
 paginate: 8                  # number of articles per page
 excerpt_separator: "\n\n\n"  # indicate the end of the excerpt by two blank lines
 
