--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: "Diseño de la Investigación Social"
+title: "SOL300_19"
 author: "Pia Carozzi"
-description: "Apuntes Ayudantía"
-lang: "es"
+description: "Ayudantía Diseño de la Investigación Social"
+lang: "en"
 
 # Page settings
 permalink: /:title/          # see https://jekyllrb.com/docs/permalinks/
