--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ dark_header: true           # keep the header dark
 # style: minimal             # use a simpler style inspired by the minima theme
 
 navigation:                  # (optional) site navigation in the header
-  - index.html
+# - index.html
   - README.md
-  - Programa: "https://"       # linking external sites is also supported
+# - Programa: "https://"       # linking external sites is also supported
 
 icons:                       # (optional) icons in the header, see http://fontawesome.com/icons
   envelope: "mailto:pjcarozzi@uc.cl"
