--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "SOL3000 &#58; Diseño y Análisis de la Investigación Social"
+title: "SOL3000"
 author: "Pia Carozzi"
 description: "Ayudantía"
 lang: "es"
