--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Really cool blog about ... something"
+title: "SOL3000"
+author: "Pia Carozzi"
+description: "Apuntes ayudantia"
 lang: "en"
 
 # Page settings
@@ -10,7 +10,7 @@ hide_title: false            # remove site heading in the header
 post_footer: true            # show previous and next links at the end of each post
 
 # Theme settings
-dark_theme: false            # use the dark mode as default
+dark_theme: true             # use the dark mode as default
 dark_header: false           # keep the header dark
 # style: minimal             # use a simpler style inspired by the minima theme
 
@@ -20,8 +20,8 @@ navigation:                  # (optional) site navigation in the header
 #  - title: "https://"       # linking external sites is also supported
 
 icons:                       # (optional) icons in the header, see http://fontawesome.com/icons
-  envelope: "mailto:"
-  github: "https://"
+  envelope: "mailto:pjcarozzi@uc.l"
+  github: "https://github.com/pjcarozzi/SOL3000_19"
   rss: "/SOL3000_19/feed.xml"
 
 # Pagination
