--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,12 @@ hide_title: false            # remove site heading in the header
 post_footer: true            # show previous and next links at the end of each post
 
 # Theme settings
-dark_theme: true             # use the dark mode as default
-dark_header: false           # keep the header dark
+dark_theme: false            # use the dark mode as default
+dark_header: true            # keep the header dark
 # style: minimal             # use a simpler style inspired by the minima theme
 
 navigation:                  # (optional) site navigation in the header
-#  - index.html
+  - index.html
 #  - README.md
 #  - title: "https://"       # linking external sites is also supported
 
